# playwright-app

./: .env.example  .gitignore  FEATURES.md  MERMAID.md  Makefile  NEXT.md  QUICKSTART.md  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml
.claude/plan/: README.md
.claude/rules/: architecture.md  cost-summary.md  custom-pages.md  plans.md  session-server.md  vertical-slice-runner.md
.claude/skills/use-tavily/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.claude/skills/use-tavily/experiments/: README.md  capture_fixtures.py  measure_research_timing.py  probe_edge_shapes.py  probe_research_shape.py  probe_response_shapes.py  verify_background_handoff.py
.claude/skills/use-tavily/src/: .gitignore  README.md  crawl_site_content.py  extract_url_content.py  map_extract_site_content.py  map_site_titles.py  research_background_poll.py  research_topic.py  search_extract_topic.py  search_topic.py  tav_cli.py
.claude/skills/use-tavily/src/tav_core/: __init__.py  environment.py  output.py  page_title.py  projection.py  result_contract.py  run_shell.py  tavily_types.py  text_utils.py  topic_layout.py
.claude/skills/use-tavily/tests/: README.md  test_output_layout.py  test_result_types.py
.claude/skills/use-tavily/tests/fixtures/: crawl_response.json  extract_failed_response.json  extract_response.json  map_response.json  research_response.json  search_response.json  site_pages.json
big_plans/: 00-overview.md  01-vertical-slice.md  02-server-skeleton.md  03-task-orchestration.md  04-code-generation-assembly.md  05-recording-and-resume.md  06-failure-handling.md  07-human-observation-and-control.md  08-safety-guardrails.md
resources/custom_pages/: serve.sh
scripts/internal/: cost_aggregate.py  cost_html.py  cost_log_discovery.py  cost_report.py  cost_summary.py  model_pricing.csv
scripts/server/: app.py  main.py  orchestrator.py  schemas.py  session_manager.py
scripts/stories/: README.md  advanced-form-demo.yaml  (+13 more)
(+58 files in other folders)
