[project]
name = "vertical-slice"
version = "0.1.0"
description = "Step1 vertical slice: story + snapshot -> AI -> playwright-cli, end-to-end without human mediation."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false
